--- a/androidexp/src/main/AndroidManifest.xml
+++ b/androidexp/src/main/AndroidManifest.xml
@@ -3,22 +3,25 @@
     package="com.example.androidexp">
 
     <!-- 允许访问震动设备 -->
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-        android:supportsRtl="true">
-        <activity android:name=".activity.MainActivity">
+        android:supportsRtl="true"
+        >
+        <!--android:theme="@android:style/Theme.NoTitleBar.Fullscreen"-->
+        <activity android:name=".Activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.DragActivity"></activity>
+        <activity android:name=".Activity.DragActivity" />
+        <activity android:name=".Activity.WebViewActivity" />
     </application>
 
 </manifest>
